Ensure menu links are left-aligned

--- a/src/sass/misc/_menu.scss
+++ b/src/sass/misc/_menu.scss
@@ -13,6 +13,7 @@
         border-radius: 4px;
         margin-top: .125rem;
         right: 0;
+        text-align: left;
 
         a {
             display: block;
